--- a/static/css/active_button.css
+++ b/static/css/active_button.css
@@ -12,7 +12,7 @@
     font-size: 22px;
     
     position: relative;
-    background-color: #52f382;
+    background-color: #e7c076;
     border: none;
     color: #fff;
    
