--- a/templates/invites.html
+++ b/templates/invites.html
@@ -60,8 +60,11 @@ console.log( typeof(u))
 
 <body>
     <div class="top">
-        <center><p>&nbsp;<a href="/home" id="style-2" data-replace="HOME"><span>HOME</span></a>&nbsp;&nbsp;&nbsp;<a href="/invites" id="style-2" data-replace="INVITES"><span>INVITES</span></a>&nbsp;&nbsp;&nbsp;<a href="/online" id="style-2" data-replace="ONLINE"><span>ONLINE</span></a>&nbsp;&nbsp;&nbsp;<a href="/logout" id="style-2" data-replace="LOGOUT"><span>LOGOUT</span></a></p> <br><br></center>
+        <center><p>&nbsp;<a href="/home" id="style-2" data-replace="home"><span>home</span></a>&nbsp;&nbsp;&nbsp;<a href="/invites" id="style-2" data-replace="invites"><span>invites</span></a>&nbsp;&nbsp;&nbsp;<a href="/online" id="style-2" data-replace="online"><span>online</span></a>&nbsp;&nbsp;&nbsp;<a href="/logout" id="style-2" data-replace="logout"><span>logout</span></a></p> <br><br></center>
         </div>
+
+        <div class="vertical-bar"></div>
+
 
 
 
