--- a/static/css/invites.css
+++ b/static/css/invites.css
@@ -151,7 +151,18 @@ transform: translate(-50%, -50%);
 
   }
 
+  body{
+
+    overflow: hidden;
+  }
  
   
-
+  .vertical-bar {
+    position: relative;
+    top: -30px;
+    width: 100%;
+    height: 1px;
+    background-color: #ff7675;
+    
+  }
   
