dlted unesssary files

--- a/templates/game.html
+++ b/templates/game.html
@@ -138,7 +138,7 @@ active_buttons=[]
         <div class="chat-input">      
 
             <input type="text" id="chat-input" placeholder="Send a message..."/>
-          <button type="submit" class="chat-submit" id="chat-submit" onclick="sending_msg(document.getElementById('chat-input').value); "><i class="material-icons"><img src=https://i.imgur.com/Th606mh.png></i></button>
+          <button type="submit" class="chat-submit" id="chat-submit" onclick="sending_msg(document.getElementById('chat-input').value); "><i class="material-icons"><img src="/static/image/s.png"  width="30"></i></button>
              
         </div>
       </div>
